--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,9 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# ignore all files in the build/ directory
+build/
+
+pubspec.lock
+
