--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,7 +69,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
+    - assets/images/
+    - assets/fonts/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -86,7 +87,7 @@ flutter:
   fonts:
     - family: BMDOHYEN
       fonts:
-        - asset: assets/fonts/BMDOHYEON.otf
+        - asset: assets/fonts/BMDOHYEON_otf.otf
 
   #   - family: Trajan Pro
   #     fonts:
