--- a/.gitignore
+++ b/.gitignore
@@ -39,9 +39,15 @@ app.*.symbols
 app.*.map.json
 
 # Android Studio will place build artifacts here
+
 /android/app/debug
 /android/app/profile
 /android/app/release
 
 
 
+# 소공 프로젝트
+/build
+pubspec.lock
+analysis_options.yaml
+.dart_tool
