--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,10 +38,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firebase_core:
-  firebase_auth:
-  firebase_storage:
-  cloud_firestore: 
+  firebase_core: 
+  firebase_auth: ^4.14.0
+  firebase_storage: 
+  cloud_firestore: ^4.13.1
   get: 
   logger:
   gap:
@@ -87,7 +87,7 @@ flutter:
   fonts:
     - family: BMDOHYEN
       fonts:
-        - asset: assets/fonts/BMDOHYEON_otf.otf
+        - asset: assets/fonts/BMDOHYEON.otf
 
   #   - family: Trajan Pro
   #     fonts:
