--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -88,7 +88,7 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-    - family: BMDOHYEN
+    - family: BMDOHYEON
       fonts:
         - asset: assets/fonts/BMDOHYEON.otf
 
